session-14-kubernetes-troubleshooting/homework-kubernetes-troubleshooting/manifests/pod-networking/fixed-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: api-server
  labels:
    app: api-server

spec:
  containers:
    - name: httpd
      image: busybox:1.36
      command:
        - sh
        - -c
        - |
          mkdir -p /www && echo "hello from api-server" > /www/index.html
          httpd -f -v -h /www -p 0.0.0.0:8080
      ports:
        - containerPort: 8080
