session-14-kubernetes-troubleshooting/homework-kubernetes-troubleshooting/manifests/pod-networking/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: api-server-allow-clients

spec:
  podSelector:
    matchLabels:
      app: api-server

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: api-server
      ports:
        - port: 8080
